--- a/EHCE_blog/posts/Frequency/index.qmd
+++ b/EHCE_blog/posts/Frequency/index.qmd
@@ -20,6 +20,8 @@ library(data.table)
 library(broom)
 library(DescTools)
 library(MASS)
+library(ggridges)
+library(purrr)
 ```
 
 ### Loading the base spatail data set including Counties and States boundaires
@@ -92,67 +94,78 @@ event_count_all = merge(event_count_all, avg_total_area,
 #### Average counts by county
 
 ```{r, warning=FALSE}
-# Yearly average counts per area
-avg_dat_by_year = event_count_all %>%
-  mutate(avg_counts = event_count/avg_total_area_sq_mile) %>% 
+## Yearly average counts per area
+#avg_dat_by_year = event_count_all %>%
+#  mutate(avg_counts = event_count/avg_total_area_sq_mile) %>% 
+#  distinct()
+
+#avg_dat_by_year %>% group_by(STATE_NAME) %>% 
+#  ggplot(aes(x = avg_counts, y = STATE_NAME), data = .) +
+#  stat_density_ridges(quantile_lines = TRUE, quantiles = 0.5)+ theme_minimal() + xlim(c(0,0.075))
+  
+# Overall average counts per area
+avg_dat = dat_table %>%
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  summarize(event_count = n(),
+            avg_count_per_year = event_count/15,
+            avg_total_area_100_sq_mile = mean(total_area_sq_mile)/100)%>%
+  mutate(avg_counts = avg_count_per_year/avg_total_area_100_sq_mile) %>% 
   distinct()
+
+# map
+avg_dat_map = avg_dat %>% 
+  mutate(avg_counts_map = case_when(
+    avg_counts < 0.1 ~ 0,
+    avg_counts > 13 ~ 13,
+    TRUE ~ avg_counts
+  ))
 
 #ggplot(avg_dat, aes(x = avg_counts)) + 
 #  geom_histogram(aes(y = ..density..),
 #                 colour = 1, fill = "white") +
 #  geom_density(lwd = 1, colour = 4,
 #               fill = 4, alpha = 0.25) +
-#    geom_vline(aes(xintercept=mean(avg_counts, na.rm=T)),  
-#               color="red", linetype="dashed", size=1) + 
-#  xlim(c(0, 1)) +
-#  facet_wrap()
-  
+#  geom_vline(aes(xintercept=mean(avg_counts, na.rm=T)),  
+#               color="red", linetype="dashed", size=1) + xlim(c(0,1))
 
-# Overall average counts per area
-avg_dat = dat_table %>%
-  group_by(GEOID, NAME, STATE_NAME) %>%
-  summarize(event_count = n(),
-            avg_total_area_sq_mile = mean(total_area_sq_mile))%>%
-  mutate(avg_counts = event_count/avg_total_area_sq_mile) %>% 
-  distinct()
+#avg_dat = avg_dat %>%
+#  mutate(avg_counts_cat = case_when(
+#    avg_counts < 0.14 ~ "<0.14",
+#    avg_counts >=0.14 & avg_counts <= 0.26 ~ "0.14-0.26",
+#    avg_counts >0.26 & avg_counts <= 1 ~ "0.26-1", 
+#    TRUE ~ ">1"
+#  )) %>%
+#  mutate(avg_counts_cat = factor(avg_counts_cat, 
+#                                        levels = c('<0.14', "0.14-0.26", '0.26-1',
+#                                                   '>1')))
 
-ggplot(avg_dat, aes(x = avg_counts)) + 
-  geom_histogram(aes(y = ..density..),
-                 colour = 1, fill = "white") +
-  geom_density(lwd = 1, colour = 4,
-               fill = 4, alpha = 0.25) +
-  geom_vline(aes(xintercept=mean(avg_counts, na.rm=T)),  
-               color="red", linetype="dashed", size=1) + xlim(c(0,1))
-
-avg_dat = avg_dat %>%
-  mutate(avg_counts_cat = case_when(
-    avg_counts < 0.14 ~ "<0.14",
-    avg_counts >=0.14 & avg_counts <= 0.26 ~ "0.14-0.26",
-    avg_counts >0.26 & avg_counts <= 1 ~ "0.26-1", 
-    TRUE ~ ">1"
-  )) %>%
-  mutate(avg_counts_cat = factor(avg_counts_cat, 
-                                        levels = c('<0.14', "0.14-0.26", '0.26-1',
-                                                   '>1')))
-
+#avg_dat_ex = avg_dat %>% filter(STATE_NAME != "Virginia")
 county_boundaries_catalog_all_counts <- merge(counties_geo,
-          avg_dat %>% st_drop_geometry(),
+          avg_dat_map %>% st_drop_geometry(),
           by.x="GEOID",
           by.y="GEOID",
           all.x = TRUE,
           all.y = TRUE,
           suffix = c("","_sp")) %>% st_as_sf() 
-palette <- rev(brewer.pal(4, "RdYlBu"))
+#palette <- rev(brewer.pal(4, "RdYlBu"))
 # Frequency all map with grey for non-significant p-values
-ggplot() +
+p_count_all_map = ggplot() +
   geom_sf(data = county_boundaries_catalog_all_counts,
-            aes(fill = avg_counts_cat), color = NA,
+            aes(fill = avg_counts_map), color = NA,
             lwd = .1) + 
-  scale_fill_manual(values = palette) +
+  scale_fill_gradientn(colors = c("white", "lightpink", "pink", 
+                                  "mediumpurple", "darkmagenta"),
+                       values = scales::rescale(c(0, 0.25, 0.5, 0.75, 1))) +
   geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
-  labs(fill = "Average Number of Extreme Events (2008-2022)") +
+  labs(fill = "Average Number of Extreme Events (2008-2022) per 100 square miles") +
   theme_void() + 
   theme(legend.position = "bottom")
+
+p_count_all_map
+png("~/Desktop/ehe_ece_data_integration/Frequency_maps/count_all_per_area.png",
+    height = 5, width = 7, res = 300, units = "in")
+print(p_count_all_map)
+dev.off()
 ```
 
 #### Poisson regression
@@ -163,15 +176,15 @@ For each county, a poisson regression model is used to analyze the percentage ch
 #poisson_all_area_freq <- event_count_all %>%
 #  group_by(GEOID, NAME, STATE_NAME) %>%
 #  do(model = glm(event_count ~ year_numerical + 
-#                   avg_total_area_sq_mile, family = poisson(), data = .))
+#                    offset(log(avg_total_area_sq_mile)), family = poisson(), data = .))
 
-poisson_all_area_freq <- event_count_all %>%
+nb_all_area_freq <- event_count_all %>%
   group_by(GEOID, NAME, STATE_NAME) %>%
   do(model = MASS::glm.nb(event_count ~ year_numerical + 
                             offset(log(avg_total_area_sq_mile)), data = .))
 
 # Calculating slopes, percentage changes, and evaluation metrics including goodness of fit and p-values
-slopes_all_area_adj <- poisson_all_area_freq %>%
+slopes_all_area_adj <- nb_all_area_freq %>%
   rowwise() %>%
   mutate(
     slope = coef(model)[["year_numerical"]],
@@ -292,41 +305,64 @@ county_boundaries_catalog_all <- merge(counties_geo,
 #  theme(legend.position = "bottom")
 
 #heat_colors <- c("<1%" = "lightblue", "1-5%" = "yellow", "5-10%" = "orange", ">10%" = "red")
-palette <- rev(brewer.pal(8, "RdBu"))
-ggplot() +
+palette <- rev(brewer.pal(8, "PuOr"))
+p_perc_change_all = ggplot() +
   geom_sf(data = county_boundaries_catalog_all,
             aes(fill = percentage_change_cat), color = NA,
             lwd = .1) + 
   scale_fill_manual(values = palette, na.translate = F) +
-  geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
+  geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
   labs(fill = "Percentage Change in Frequency (Area adjusted)") +
   theme_void() + 
   theme(legend.position = "bottom")
+
+p_perc_change_all
+png("~/Desktop/ehe_ece_data_integration/Frequency_maps/perc_change_all.png",
+    height = 5, width = 7, res = 300, units = "in")
+print(p_perc_change_all)
+dev.off()
 ```
 
 #### Prediction
 
 ```{r}
-#prediction_data <- expand.grid(
-#  year_numerical = c(2025, 2030),
-#  avg_impacted_area_hectare = event_count_all$avg_impacted_area_hectare
-#)
+# Prediction
+nb_reg_model = merge(nb_all_area_freq, avg_total_area)
+predictions_2025 <- nb_reg_model %>%
+  rowwise() %>%
+  mutate(predicted_2025 = predict(model, newdata = data.frame(
+    year_numerical = 2025,
+    avg_total_area_sq_mile = avg_total_area_sq_mile  
+  ), type = "response")) %>%
+  ungroup() %>%
+  dplyr::select(GEOID, NAME, STATE_NAME, predicted_2025)
 
-#predictions <- poisson_all_area_freq %>%
-#  mutate(
-#    predictions = list(
-#      apply(prediction_data, 1, function(new_data) {
-#        new_data <- as.data.frame(t(new_data))
-#        pred <- predict(model, newdata = new_data, type = "response", se.fit = TRUE)
-#        data.frame(
-#          prediction = pred$fit,
-#          lower_95 = pred$fit - 1.96 * pred$se.fit,
-#          upper_95 = pred$fit + 1.96 * pred$se.fit
-#        )
-#      })
-#    )
-#  ) %>%
-#  select(GEOID, NAME, STATE_NAME, predictions)
+# With CI
+predictions_2025_with_ci <-nb_reg_model %>%
+  rowwise() %>%
+  mutate(
+    ci_results = list(tryCatch({
+      pred_response = predict(model, newdata = data.frame(
+        year_numerical = 2025,
+        avg_total_area_sq_mile = avg_total_area_sq_mile  
+      ), type = "response", se.fit = TRUE)
+      
+      ci_lower = exp(pred_response$fit - qnorm(0.975) * pred_response$se.fit)
+      ci_upper = exp(pred_response$fit + qnorm(0.975) * pred_response$se.fit)
+
+      list(predicted_2025 = pred_response$fit, ci_lower = ci_lower, ci_upper = ci_upper)
+    }, error = function(e) {
+      # Return NA if error
+      list(predicted_2025 = NA, ci_lower = NA, ci_upper = NA)
+    }))
+  ) %>%
+  ungroup() %>%
+  mutate(
+    predicted_2025 = map_dbl(ci_results, "predicted_2025"),
+    ci_lower = map_dbl(ci_results, "ci_lower"),
+    ci_upper = map_dbl(ci_results, "ci_upper")
+  ) %>%
+  dplyr::select(GEOID, NAME, STATE_NAME, predicted_2025, ci_lower, ci_upper)
 ```
 
 ### Extreme Heat Events
@@ -398,11 +434,25 @@ hist(slopes_ehe_poi_area_adj$aic)
 #### Average Counts by County
 
 ```{r}
-avg_counts_county_ehe = event_count_ehe %>% 
-  group_by(GEOID, NAME, STATE_NAME) %>% 
-  summarise(county_avg_count = mean(event_count))
+avg_counts_county_ehe = dat_table %>%
+  filter(event_type == "Extreme Heat Event") %>%
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  summarize(event_count = n(),
+            avg_count_per_year = event_count/15,
+            avg_total_area_100_sq_mile = mean(total_area_sq_mile)/100)%>%
+  mutate(avg_counts = avg_count_per_year/avg_total_area_100_sq_mile) 
+
+# map
+avg_dat_map_ehe = avg_counts_county_ehe %>% 
+  mutate(avg_counts_map = case_when(
+    avg_counts < 0.1 ~ 0,
+    avg_counts > 13 ~ 13,
+    TRUE ~ avg_counts
+  ))
+
+#avg_dat_ex_ehe = avg_counts_county_ehe %>% filter(STATE_NAME != "Virginia")
 county_boundaries_catalog_ehe_counts <- merge(counties_geo,
-          avg_counts_county_ehe %>% st_drop_geometry(),
+          avg_dat_map_ehe %>% st_drop_geometry(),
           by.x="GEOID",
           by.y="GEOID",
           all.x = TRUE,
@@ -410,15 +460,22 @@ county_boundaries_catalog_ehe_counts <- merge(counties_geo,
           suffix = c("","_sp")) %>% st_as_sf() 
 
 # Frequency all map with grey for non-significant p-values
-ggplot() +
+p_ehe_count_map = ggplot() +
   geom_sf(data = county_boundaries_catalog_ehe_counts,
-            aes(fill = county_avg_count), color = NA,
+            aes(fill = avg_counts_map), color = NA,
             lwd = .1) + 
-  scale_fill_viridis_c(option = "B", direction = -1) +
-  geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
-  labs(fill = "Average Number of Extreme Heat Events (2008-2022)") +
+  scale_fill_gradientn(colors = c("white", "yellow", "orange", "red", "darkred"),
+                       values = scales::rescale(c(0, 0.25, 0.5, 0.75, 1))) +
+  geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
+  labs(fill = "Average Number of Extreme Heat Events per 100 Square Miles (2008-2022)") +
   theme_void() + 
   theme(legend.position = "bottom")
+
+p_ehe_count_map
+png("~/Desktop/count_ehe_per_area.png",
+    height = 5, width = 7, res = 300, units = "in")
+print(p_ehe_count_map)
+dev.off()
 ```
 
 #### Map
@@ -446,16 +503,22 @@ county_boundaris_ehe_catalog <- merge(counties_geo,
 #  theme(legend.position = "bottom")
 
 #heat_colors <- c("<1%" = "lightblue", "1-5%" = "yellow", "5-10%" = "orange", ">10%" = "red")
-palette <- rev(brewer.pal(8, "RdBu"))
-ggplot() +
+#palette_ehe <- rev(brewer.pal(8, "RdBu"))
+p_perc_change_ehe = ggplot() +
   geom_sf(data = county_boundaris_ehe_catalog,
             aes(fill = percentage_change_cat), color = NA,
             lwd = .1) + 
   scale_fill_manual(values = palette, na.translate = F) +
-  geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
+  geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
   labs(fill = "Percentage Change in Frequency EHE (Area adjusted)") +
   theme_void() + 
   theme(legend.position = "bottom")
+
+p_perc_change_ehe
+png("~/Desktop/ehe_ece_data_integration/Frequency_maps/perc_change_ehe.png",
+    height = 5, width = 7, res = 300, units = "in")
+print(p_perc_change_ehe)
+dev.off()
 ```
 
 ### Extreme Cold Events
@@ -531,11 +594,23 @@ slopes_ece_poi_area_adj = slopes_ece_poi_area_adj %>%
 #### Average counts by county
 
 ```{r}
-avg_counts_county_ece = event_count_ece %>% 
-  group_by(GEOID, NAME, STATE_NAME) %>% 
-  summarise(county_avg_count = mean(event_count))
+avg_counts_county_ece = dat_table %>%
+  filter(event_type == "Extreme Cold Event") %>%
+  group_by(GEOID, NAME, STATE_NAME) %>%
+  summarize(event_count = n(),
+            avg_count_per_year = event_count/15,
+            avg_total_area_100_sq_mile = mean(total_area_sq_mile)/100)%>%
+  mutate(avg_counts = avg_count_per_year/avg_total_area_100_sq_mile) 
+
+# map
+avg_dat_map_ece = avg_counts_county_ece %>% 
+  mutate(avg_counts_map = case_when(
+    avg_counts < 0.1 ~ 0,
+    avg_counts > 13 ~ 13,
+    TRUE ~ avg_counts
+  ))
 county_boundaries_catalog_ece_counts <- merge(counties_geo,
-          avg_counts_county_ece %>% st_drop_geometry(),
+          avg_dat_map_ece %>% st_drop_geometry(),
           by.x="GEOID",
           by.y="GEOID",
           all.x = TRUE,
@@ -543,15 +618,22 @@ county_boundaries_catalog_ece_counts <- merge(counties_geo,
           suffix = c("","_sp")) %>% st_as_sf() 
 
 # Frequency all map with grey for non-significant p-values
-ggplot() +
+p_ece_count_map = ggplot() +
   geom_sf(data = county_boundaries_catalog_ece_counts,
-            aes(fill = county_avg_count), color = NA,
+            aes(fill = avg_counts_map), color = NA,
             lwd = .1) + 
-  scale_fill_viridis_c(option = "D", direction = -1) +
-  geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
-  labs(fill = "Average Number of Extreme Cold Events (2008-2022)") +
+  scale_fill_gradientn(colors = c("white", "lightblue", "dodgerblue", "blue", "darkblue"),
+                       values = scales::rescale(c(0, 0.25, 0.5, 0.75, 1))) +
+  geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
+  labs(fill = "Average Number of Extreme Cold Events per 100 Square Miles  (2008-2022)") +
   theme_void() + 
   theme(legend.position = "bottom")
+
+p_ece_count_map
+png("~/Desktop/count_ece_per_area.png",
+    height = 5, width = 7, res = 300, units = "in")
+print(p_ece_count_map)
+dev.off()
 ```
 
 #### Map
@@ -579,16 +661,22 @@ county_boundaris_ece_catalog <- merge(counties_geo,
 #  theme(legend.position = "bottom")
 
 #heat_colors <- c("<1%" = "lightblue", "1-5%" = "yellow", "5-10%" = "orange", ">10%" = "red")
-palette <- rev(brewer.pal(8, "RdBu"))
-ggplot() +
+#palette_ece <- brewer.pal(8, "RdBu")
+p_perc_change_ece = ggplot() +
   geom_sf(data = county_boundaris_ece_catalog,
             aes(fill = percentage_change_cat), color = NA,
             lwd = .1) + 
   scale_fill_manual(values = palette, na.translate = F) +
-  geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
+  geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
   labs(fill = "Percentage Change in Frequency ECE (Area adjusted)") +
   theme_void() + 
   theme(legend.position = "bottom")
+
+p_perc_change_ece
+png("~/Desktop/ehe_ece_data_integration/Frequency_maps/perc_change_ece.png",
+    height = 5, width = 7, res = 300, units = "in")
+print(p_perc_change_ece)
+dev.off()
 ```
 
 ### State Level Analysis
