--- a/EHCE_blog/scipts/Observation/freq_obs.qmd
+++ b/EHCE_blog/scipts/Observation/freq_obs.qmd
@@ -54,7 +54,6 @@ dat <- readRDS(dat_path)[[1]]
 dat_table = dat %>%  st_drop_geometry()
 dat_table = dat_table %>% 
   filter(!(event_type == "Extreme Cold Event" & month_numerical %in% 5:9))
-dat_table$total_area_sq_mile = dat_table$total_area/2590000
 ```
 
 #### Average counts by county
@@ -63,22 +62,12 @@ dat_table$total_area_sq_mile = dat_table$total_area/2590000
 # Overall average counts per area
 avg_dat = dat_table %>%
   group_by(GEOID, NAME, STATE_NAME) %>%
-  summarize(event_count = n(),
-            avg_count_per_year = event_count/15,
-            avg_total_area_100_sq_mile = mean(total_area_sq_mile)/100)%>%
-  mutate(avg_counts = avg_count_per_year/avg_total_area_100_sq_mile) 
-
+  summarize(event_count = n_distinct(event_date),
+            avg_count_per_year = event_count/15)
 
 # map
-avg_dat_map = avg_dat %>% 
-  mutate(avg_counts_map = case_when(
-    avg_counts < 0.1 ~ 0,
-    avg_counts > 13 ~ 13,
-    TRUE ~ avg_counts
-  ))
-
 county_boundaries_catalog_all_counts <- merge(counties_geo,
-          avg_dat_map %>% st_drop_geometry(),
+          avg_dat %>% st_drop_geometry(),
           by.x="GEOID",
           by.y="GEOID",
           all.x = TRUE,
@@ -88,13 +77,10 @@ county_boundaries_catalog_all_counts <- merge(counties_geo,
 # Frequency all map with grey for non-significant p-values
 p_count_all_map = ggplot() +
   geom_sf(data = county_boundaries_catalog_all_counts,
-            aes(fill = avg_counts_map), color = NA,
+            aes(fill = avg_count_per_year), color = NA,
             lwd = .1) + 
-  scale_fill_gradientn(colors = c("white", "lightpink", "pink", 
-                                  "mediumpurple", "darkmagenta"),
-                       values = scales::rescale(c(0, 0.25, 0.5, 0.75, 1))) +
-  geom_sf(data = states_geo, fill = NA, color = "grey", size = 0.5) +
-  labs(fill = "Average Number of Extreme Events (2008-2022) per 100 square miles") +
+  scale_fill_viridis_c(option = "D", direction = -1) +
+  labs(fill = "Average Number of Extreme Events (2008-2022)") +
   theme_void() + 
   theme(legend.position = "bottom")
 
@@ -113,22 +99,12 @@ p_count_all_map
 avg_counts_county_ehe = dat_table %>%
   filter(event_type == "Extreme Heat Event") %>%
   group_by(GEOID, NAME, STATE_NAME) %>%
-  summarize(event_count = n(),
-            avg_count_per_year = event_count/15,
-            avg_total_area_100_sq_mile = mean(total_area_sq_mile)/100)%>%
-  mutate(avg_counts = avg_count_per_year/avg_total_area_100_sq_mile) 
+  summarize(event_count = n_distinct(event_date),
+            avg_count_per_year = event_count/15)
 
 # map
-avg_dat_map_ehe = avg_counts_county_ehe %>% 
-  mutate(avg_counts_map = case_when(
-    avg_counts < 0.1 ~ 0,
-    avg_counts > 13 ~ 13,
-    TRUE ~ avg_counts
-  ))
-
-#avg_dat_ex_ehe = avg_counts_county_ehe %>% filter(STATE_NAME != "Virginia")
 county_boundaries_catalog_ehe_counts <- merge(counties_geo,
-          avg_dat_map_ehe %>% st_drop_geometry(),
+          avg_counts_county_ehe %>% st_drop_geometry(),
           by.x="GEOID",
           by.y="GEOID",
           all.x = TRUE,
@@ -138,12 +114,11 @@ county_boundaries_catalog_ehe_counts <- merge(counties_geo,
 # Frequency all map with grey for non-significant p-values
 p_ehe_count_map = ggplot() +
   geom_sf(data = county_boundaries_catalog_ehe_counts,
-            aes(fill = avg_counts_map), color = NA,
+            aes(fill = avg_count_per_year), color = NA,
             lwd = .1) + 
-  scale_fill_gradientn(colors = c("white", "yellow", "orange", "red", "darkred"),
-                       values = scales::rescale(c(0, 0.25, 0.5, 0.75, 1))) +
+  scale_fill_viridis_c(option = "B", direction = -1) +
   geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
-  labs(fill = "Average Number of Extreme Heat Events per 100 Square Miles (2008-2022)") +
+  labs(fill = "Average Number of Extreme Heat Events (2008-2022)") +
   theme_void() + 
   theme(legend.position = "bottom")
 
@@ -162,20 +137,12 @@ p_ehe_count_map
 avg_counts_county_ece = dat_table %>%
   filter(event_type == "Extreme Cold Event") %>%
   group_by(GEOID, NAME, STATE_NAME) %>%
-  summarize(event_count = n(),
-            avg_count_per_year = event_count/15,
-            avg_total_area_100_sq_mile = mean(total_area_sq_mile)/100)%>%
-  mutate(avg_counts = avg_count_per_year/avg_total_area_100_sq_mile) 
+  summarize(event_count = n_distinct(event_date),
+            avg_count_per_year = event_count/15)
 
 # map
-avg_dat_map_ece = avg_counts_county_ece %>% 
-  mutate(avg_counts_map = case_when(
-    avg_counts < 0.1 ~ 0,
-    avg_counts > 13 ~ 13,
-    TRUE ~ avg_counts
-  ))
 county_boundaries_catalog_ece_counts <- merge(counties_geo,
-          avg_dat_map_ece %>% st_drop_geometry(),
+          avg_counts_county_ece %>% st_drop_geometry(),
           by.x="GEOID",
           by.y="GEOID",
           all.x = TRUE,
@@ -185,12 +152,11 @@ county_boundaries_catalog_ece_counts <- merge(counties_geo,
 # Frequency all map with grey for non-significant p-values
 p_ece_count_map = ggplot() +
   geom_sf(data = county_boundaries_catalog_ece_counts,
-            aes(fill = avg_counts_map), color = NA,
+            aes(fill = avg_count_per_year), color = NA,
             lwd = .1) + 
-  scale_fill_gradientn(colors = c("white", "lightblue", "dodgerblue", "blue", "darkblue"),
-                       values = scales::rescale(c(0, 0.25, 0.5, 0.75, 1))) +
+  scale_fill_viridis_c(option = "G", direction = -1) +
   geom_sf(data = states_geo, fill = NA, color = "black", size = 0.1) +
-  labs(fill = "Average Number of Extreme Cold Events per 100 Square Miles  (2008-2022)") +
+  labs(fill = "Average Number of Extreme Cold Events (2008-2022)") +
   theme_void() + 
   theme(legend.position = "bottom")
 
